# ag_gen

./: .clang-format  .editorconfig  .gitignore  .travis.yml  .zsh  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.old  README.md  ag_asset.c  ag_asset.h  ag_exploit.c  ag_exploit.h  ag_facts.c  ag_facts.h  ag_gen  ag_gen.c  ag_gen.cfg  ag_gen_perf.sh  ag_generator_utils.c  ag_generator_utils.h  ag_network.c  ag_network.h  ag_redisasset.c  ag_redisasset.h  ag_redisclient.c  ag_redisclient.h  ag_redisconnect.c  ag_redisconnect.h  ag_redisexploit.c  ag_redisexploit.h  caggen.c  config  config.ini  config.txt  config_default.txt  db_manage.sh  db_test.c  (+49 more)
data/: assets  attributes  values
doc/html/: ag__gen_8h_source.html  annotated.html  asset_8h_source.html  assetgroup_8h_source.html  build__sql_8h_source.html  class_a_g_gen-members.html  class_a_g_gen.html  class_asset-members.html  class_asset.html  class_asset_group-members.html  class_asset_group.html  class_config-members.html  class_config.html  class_connection-members.html  class_connection.html  class_d_b-members.html  class_d_b.html  class_d_b_exception-members.html  class_d_b_exception.html  class_edge-members.html  class_edge.html  class_exploit-members.html  class_exploit.html  class_factbase-members.html  class_factbase.html  class_keyvalue-members.html  class_keyvalue.html  class_network-members.html  class_network.html  class_network_state-members.html  class_network_state.html  class_odometer-members.html  class_odometer.html  class_parameterized_topology-members.html  class_parameterized_topology.html  class_quality-members.html  class_quality.html  class_topology-members.html  class_topology.html  classes.html  (+47 more)
doc/html/search/: all_0.js  all_2.js  all_8.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_a.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  searchdata.js
doc/latex/: annotated.tex  class_a_g_gen.tex  class_asset.tex  class_asset_group.tex  class_config.tex  class_connection.tex  class_d_b.tex  class_d_b_exception.eps  class_d_b_exception.tex  class_edge.tex  class_exploit.tex  class_factbase.tex  class_keyvalue.tex  class_network.tex  class_network_state.tex  class_odometer.tex  class_parameterized_topology.tex  class_quality.tex  class_topology.tex  hierarchy.tex  refman.tex  struct_attack___node.tex  struct_ed.tex  struct_parameterized_quality.tex  struct_ve.tex  structhashnode.tex  structhashtable.tex  structstatement.tex  structstr__array.tex  union_encoded_quality.tex  union_encoded_topology.tex
docs/: network-model-grammar.txt
examples/: SystemV12_DIE_PIPE.xp  SystemV12cda4.2.nm  SystemV8.nm  SystemV8.xp  SystemV8Lite.nm  SystemV8Lite.xp  SystemV8Lite2.xp  SystemV8Test.xp  attacks.xp  attackthis.nm  cda-simple.nm  cda1.1.nm  cda1.1.xp  cda4.1-SUPERSIMPLIFIED.xp  cda4.1-Simplified.xp  db_api_example.cpp  full-example.nm  full-example.xp  grammar-test.nm  new_thesis_example.nm  new_thesis_example.xp  thesis_example.nm  thesis_example.xp  thesis_example2.nm  thesis_example3.nm  thesis_example3.xp
model_gen/: CMakeLists.txt  Makefile  atkPat.cpp  atkPat.h  main.cpp  model_gen  netMod.cpp  netMod.h
parser/: exploits.l  exploits_parser.y  network_model.l  network_state.c  network_state.l  network_state_parser.tab.c  network_state_parser.tab.h  network_state_parser.y
redis_scripts/: broadcast.lua  collisions.lua
sql/: ag_example_data.sql  arvin_example.sql  create_ag_schema.sql  delete_ag_schema.sql  example_data.sql  exploit_examples.sql  factbase.sql  schema.sql  test_data.sql
src/: ._network.h  ag_asset.c  ag_asset.h  ag_exploit.c  ag_exploit.h  ag_facts.c  ag_facts.h  ag_gen.c  ag_gen.cpp  ag_gen.h  ag_gen.hpp  ag_network.h  ag_network_state.h  ag_redisasset.c  ag_redisexploit.c  appl_exploit.cpp  appl_exploit.h  asset.c  asset.cpp  asset.h  asset.hpp  assetgroup.cpp  assetgroup.h  config.cpp  config.h  config.hpp  db_test.c  db_util.h  edge.cpp  edge.h  exploit.c  exploit.cpp  exploit.h  exploit.hpp  fact.h  fact.hpp  factbase.cpp  factbase.h  factbase.hpp  functional.hpp  (+77 more)
src/ag_gen/: ag_gen.cpp  ag_gen.h  asset.cpp  asset.h  assetgroup.cpp  assetgroup.h  config.cpp  config.h  edge.cpp  edge.h  exploit.cpp  exploit.h  factbase.cpp  factbase.h  global.h  network.h  network_state.cpp  network_state.h  parameterized_quality.cpp  parameterized_quality.h  parameterized_topology.cpp  parameterized_topology.h  quality.cpp  quality.h  topology.cpp  topology.h
src/compiler/: Makefile  build_sql.c  build_sql.h  custom_lexer.cpp  custom_lexer.h  location.hh  main.cpp  network_state_parser.ypp  network_state_scanner.ll  nm  nm_driver.cpp  nm_driver.hpp  nm_parser.tab.cpp  nm_parser.tab.hpp  nm_parser.ypp  nm_parser.yy  nm_scanner.cpp  nm_scanner.hpp  nm_scanner.l  nm_scanner.ll  position.hh  stack.hh  str_util.c  str_util.h  test  util_hash.c  util_hash.h  xp_parser.yy  xp_scanner.l  zfs_io.awk.sh
src/examples/: db_api_example.cpp  graph_example.cpp
src/fbitems/: fbitems.cpp
src/parser/nm-parser/: nm_parser.yy  nm_scanner.l
src/parser/xp-parser/: xp_parser.yy  xp_scanner.l
src/tests/: mem_test.c  test_db.c  test_dynarray.c  test_hash.c  test_keyvalue.cpp  test_list.c  test_odometer.c  test_redis.c  test_string.c
src/tools/: decode.cpp  graphing_db.cpp  hash_replace.py  netgen.cpp  sha256_test.cpp
src/util/: build_sql.c  build_sql.h  common.cpp  common.h  db.h  db_functions.cpp  db_functions.h  hash.c  hash.h  keyvalue.h  list.c  list.h  mem.c  mem.h  odometer.h  redis_manager.cpp  redis_manager.h  str_array.c  str_array.h  vector.c  vector.h
test/: test_db.c  test_hash.c  test_keyvalue.cpp  test_odometer.c
tools/: 2dmatrix_conv.cpp  db2_test.cpp  db_save.cpp  graph_test.cpp  graphing_db.cpp  nm_scanner.cpp  sha256_test.cpp
tools/compiler/: exploit_parser.ypp  exploit_scanner.l  exploit_scanner.ll  exploits_parser.y  network_state_parser.y  network_state_parser.ypp  network_state_scanner.l
